--- a/app/src/main/res/layout/fragment_apod_archive.xml
+++ b/app/src/main/res/layout/fragment_apod_archive.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/list"
+        android:id="@+id/archive_list_rv"
         android:name="me.lukeforit.spaceofaday.ui.archive.ApodFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
