--- a/app/src/main/res/layout/list_item_apod.xml
+++ b/app/src/main/res/layout/list_item_apod.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,27 +10,49 @@
             type="me.lukeforit.spaceofaday.data.model.Apod" />
     </data>
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_margin="@dimen/size_small"
+        android:orientation="horizontal"
+        app:background_url="@{apod.url}">
 
         <TextView
             android:id="@+id/title_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
+            android:layout_margin="@dimen/size_medium"
             android:text="@{apod.title}"
             android:textAppearance="?attr/textAppearanceListItem"
-            tools:text="Title"/>
+            app:layout_constraintEnd_toStartOf="@+id/more_iv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Title" />
 
         <ImageView
-            android:id="@+id/imageButton"
+            android:id="@+id/more_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:src="@drawable/ic_keyboard_arrow_down" />
+            android:layout_margin="@dimen/size_medium"
+            android:src="@drawable/ic_keyboard_arrow_down"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/explanation_tv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/size_medium"
+            android:text="@{apod.explanation}"
+            android:lines="@integer/max_lines"
+            android:ellipsize="end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/more_iv"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_tv"
+            tools:text="Explanation" />
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
