--- a/app/src/main/res/xml/apod_widget_info.xml
+++ b/app/src/main/res/xml/apod_widget_info.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:configure="me.lukeforit.spaceofaday.ui.widget.ApodWidgetConfigureActivity"
-    android:initialKeyguardLayout="@layout/apod_widget"
-    android:initialLayout="@layout/apod_widget"
+    android:configure="me.lukeforit.spaceofaday.ui.widget.config.ApodWidgetConfigureActivity"
+    android:initialKeyguardLayout="@layout/widget_apod"
+    android:initialLayout="@layout/widget_apod"
     android:minHeight="110dp"
     android:minWidth="110dp"
     android:previewImage="@drawable/ic_photo_size_select_actual"
