--- a/app/src/main/res/layout/widget_apod.xml
+++ b/app/src/main/res/layout/widget_apod.xml
@@ -1,21 +1,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@color/colorPrimaryDark"
     android:padding="@dimen/widget_margin">
 
+    <ImageView
+        android:id="@+id/picture_iv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
+
     <TextView
-        android:id="@+id/appwidget_text"
+        android:id="@+id/explanation_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="#09C"
+        android:layout_margin="@dimen/size_medium"
+        android:scrollbars = "vertical"
+        android:background="#3cffffff"
         android:contentDescription="@string/appwidget_text"
         android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textColor="#ffffff" />
+
 
 </RelativeLayout>
