--- a/app/src/main/res/layout/list_item_apod_empty.xml
+++ b/app/src/main/res/layout/list_item_apod_empty.xml
@@ -7,22 +7,21 @@
 
         <variable
             name="item"
-            type="me.lukeforit.spaceofaday.data.model.Apod" />
+            type="String" />
     </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/size_small"
-        android:orientation="horizontal"
-        app:background_url="@{item.url}">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/title_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
-            android:text="@{item.title}"
+            android:text="@{item}"
             android:textAppearance="?attr/textAppearanceListItem"
             app:layout_constraintEnd_toStartOf="@+id/more_iv"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,18 +40,18 @@
 
 
         <TextView
-            android:id="@+id/explanation_tv"
+            android:id="@+id/instructions_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
-            android:text="@{item.explanation}"
+            android:text="@string/item_apod_empty_instruction"
             android:lines="@integer/max_lines"
             android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/more_iv"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_tv"
-            tools:text="Explanation" />
+            />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
