--- a/app/src/main/res/layout/list_item_apod.xml
+++ b/app/src/main/res/layout/list_item_apod.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
+            android:contentDescription="@string/button_description_more"
             android:src="@drawable/ic_keyboard_arrow_down"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,9 +46,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
-            android:text="@{item.explanation}"
-            android:lines="@integer/max_lines"
             android:ellipsize="end"
+            android:lines="@integer/max_lines"
+            android:text="@{item.explanation}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/more_iv"
             app:layout_constraintStart_toStartOf="parent"
