--- a/app/src/main/res/layout/fragment_apod_details.xml
+++ b/app/src/main/res/layout/fragment_apod_details.xml
@@ -32,11 +32,12 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <ImageView
-                    android:id="@+id/main_backdrop"
+                    android:id="@+id/apod_iv"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
+                    android:contentDescription="@string/apod_description"
                     app:layout_collapseMode="parallax"
                     bind:image_url="@{vm.apodLiveData.url}"/>
 
