--- a/app/src/main/res/layout/list_item_apod_empty.xml
+++ b/app/src/main/res/layout/list_item_apod_empty.xml
@@ -33,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
+            android:contentDescription="@string/button_description_more"
             android:src="@drawable/ic_keyboard_arrow_down"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,14 +45,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
-            android:text="@string/item_apod_empty_instruction"
-            android:lines="@integer/max_lines"
             android:ellipsize="end"
+            android:lines="@integer/max_lines"
+            android:text="@string/item_apod_empty_instruction"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/more_iv"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_tv"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/title_tv" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
