--- a/app/src/main/res/layout/list_item_apod_empty.xml
+++ b/app/src/main/res/layout/list_item_apod_empty.xml
@@ -33,8 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
-            android:contentDescription="@string/button_description_more"
-            android:src="@drawable/ic_keyboard_arrow_down"
+            android:contentDescription="@string/button_description_download"
+            android:src="@drawable/ic_download"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +46,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size_medium"
             android:ellipsize="end"
-            android:lines="@integer/max_lines"
             android:text="@string/item_apod_empty_instruction"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/more_iv"
