--- a/app/src/main/res/layout/fragment_apod_archive.xml
+++ b/app/src/main/res/layout/fragment_apod_archive.xml
@@ -8,14 +8,14 @@
             type="me.lukeforit.spaceofaday.ui.archive.ApodArchiveViewModel" />
     </data>
 
-    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/archive_list_rv"
         android:name="me.lukeforit.spaceofaday.ui.archive.ApodFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:context="me.lukeforit.spaceofaday.ui.archive.ApodArchiveFragment"
         tools:listitem="@layout/list_item_apod" />
 </layout>
